@@ -19,6 +19,10 @@
 	-----
 
 ========================
+
+03/07
+	* Updated skills that shouldn't ignore the target's cards: Smoking, Fling,
+	  Zenynage. [Skotlex]
 03/06
 	* Fixed Flying Angel headgear [Playtester]
 	* Corrected the NK values of skills (0x08 -> 0x80): Self Destruction,
